--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <title>TNXK</title>
+    <link rel="stylesheet" href="main.css" />
+    <title>Thanh Niên Xung Kích</title>
   </head>
   <body>
     <div class="login">
@@ -16,7 +16,7 @@
       <div class="box">
         <input type="password" id="password" placeholder="Password" />
       </div>
-      <a href="/new2.html" class="btnLogin">Đăng nhập</a>
+      <a href="bentrong.html" class="btnLogin">Đăng nhập</a>
     </div>
   </body>
 </html>
