--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div class="box">
         <input type="password" id="password" placeholder="Password" />
       </div>
-      <a href="/new2.html" class="btnLogin">Đăng nhập</a>
+      <a href="bentrong.html" class="btnLogin">Đăng nhập</a>
     </div>
   </body>
 </html>
