--- a/bentrong.html
+++ b/bentrong.html
@@ -3,9 +3,59 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="main2.css" />
+    <script src="js1.js"></script>
     <title>Kỉ yếu của Dũng Vũ</title>
   </head>
   <body>
-    <p><center>NGÔ MINH HỒNG XẤU XÍ</center></p>
+    <div class="page-wrapper">
+      <div class="card">
+        <div
+          class="card-packaging bg-img-base"
+          style=
+        
+        >
+          <div class="card-center">
+            <a
+              class="close bg-img-base"
+              href="#"
+              style="
+                background-image: url(https://cdn3.iconfinder.com/data/icons/pyconic-icons-1-2/512/close-circle-512.png);
+              "
+            ></a>
+          </div>
+          <div class="card--first">
+            <div
+              class="card-wrapper bg-img-base front"
+              style="
+                background-image: url(https://scontent.fhan3-3.fna.fbcdn.net/v/t39.30808-6/435569628_1167355271345328_5291776557229197284_n.jpg?stp=dst-jpg_p526x296&_nc_cat=101&ccb=1-7&_nc_sid=5f2048&_nc_eui2=AeGKNOI_C9vK1KXKuR1ARcy5Pt4y3J3HYvk-3jLcncdi-btx8A2iZZdP6JyKBqTyMyHeVoiN2ztJDypbhxOTY3aC&_nc_ohc=c0HS3gmR3woAb7UbkFi&_nc_ht=scontent.fhan3-3.fna&oh=00_AfB8kflyJuJZ5rwXjwJEsIS72dyT5Ie2e19Nra-ykKF76Q&oe=661AC930);
+              "
+            >
+              <a class="open" href="#">
+                <div class="open-tail"></div>
+                <div class="open-main">
+                  <span class="open-title">Open</span>
+                </div>
+              </a>
+            </div>
+            <div
+              class="card-wrapper bg-img-base back"
+              style=
+                
+            ></div>
+          </div>
+          <div class="card--third">
+            <div
+              class="card-wrapper bg-img-base front"
+              style=
+            ></div>
+            <div
+              class="card-wrapper bg-img-base back"
+              style=
+            ></div>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
